# rgb-lm

./: CMakeLists.txt  download-podcast.sh  lm.proto  measure.c
alarm-clock/: CMakeLists.txt  alarms.c  controller.c  controller.h  main.c  rotary_encoder.c  rotary_encoder.h  server.c  server.h  time_util.c  time_util.h  wakedog.c
alarm-clock/audio/: audio.h  audio_ffmpeg.c
alarm-clock/discovery/: discovery_server.c
alarm-clock/screen/: menu.c  screen.c  visualize.c
alarm-clock/screen/menu/: alarms.c  alarms.h  clock.c  mesmerizing.c  mesmerizing.h
cmake-modules/: FindAVCodec.cmake  FindAVFormat.cmake  FindAVResample.cmake  FindAVUtil.cmake  FindProtobufCRPC.cmake  FindUThash.cmake  FindWiringPi.cmake
controller/: CMakeLists.txt  alarms.c  alarms.h  client.c  controller.c  controller.h  discovery_server.h  generate-java-protobuf.sh  lm.proto  main.c  server.c  server.h
controller/screen/: alarms.c  alarms.h  alarms_screen.c  example.c  example_screens.c  example_screens.h  menu.c  menu_screens.c  menu_screens.h  screen.c  screen.h  screens.h
examples/: CMakeLists.txt  main_test.c  mesmerizing.c  pulsing.c  simple_fill.c  simple_font.c  simple_pixels.c  transform_fonts.c
graphics/: 1.ppm  2.ppm  3.ppm  boot.ppm
java/: pom.xml
java/src/main/java/lm/: FontLibrary.java  GPIO.java  LedMatrix.java  LedMatrixString.java  LedMatrixThread.java  Lm.java  LmLibrary.java  Main.java  Matrix.java  RGB.java  lmMatrix_.java  rgb_.java
java/src/main/java/lm/jna/: FontLibrary.java  GPIO.java  LedMatrix.java  LedMatrixString.java  LedMatrixThread.java  LmLibrary.java  Matrix.java  RGB.java
m3u/: CMakeLists.txt  m3u.c  m3u.h
protocol/: CMakeLists.txt  client.c  server.c
server/: CMakeLists.txt  alarms.c  alarms.h  audio.c  audio.h  audio_ffmpeg.c  controller.c  controller.h  input.c  input.h  main.c  rotary_encoder.c  rotary_encoder.h  server.c  server.h  wakedog.c  wakedog.h
server/audio/: audio.c  audio.h  audio_ffmpeg.c  ffmpeg_compat.c
server/discovery/: discovery_server.c  discovery_server.h
server/ffmpeg/: audio_ffmpeg.c  ffmpeg_compat.c
server/screen/: example.c  example.h  menu.c  menu.h  screen.c  screen.h  visualize.c  visualize.h
server/screen/menu/: clock.c  clock.h  mesmerizing.c
src/: CMakeLists.txt  font.c  font.h  gpio.c  gpio.h  io_bits.c  io_bits.h  led-matrix.c  led-matrix.h  lm.h  thread.c  thread.h
src/lm/: CMakeLists.txt  font.c  font.h  gpio.c  gpio.h  io_bits.c  io_bits.h  led-matrix.c  led-matrix.h  lm.h  ppm.c  ppm.h  thread.c  thread.h
